various ai performance improvements